--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,18 @@
-Package: RTemplate
-Title: Your project
+Package: OCRClimate
+Title: OCR for Climate Data
 Version: 0.1
-Authors@R: 
+Authors@R: c(
     person(
-      given = "X",
-      family = "Y",
-      email = "x.y@example.com",
+      given = "Koen",
+      family = "Hufkens",
+      email = "koen.hufkens@gmail.com",
       role = c("aut", "cre"),
-      comment = c(ORCID = "0000-0000-0000-0000")
+      comment = c(ORCID = "0000-0002-5070-8109")
+    ),
+    person(given = "BlueGreen Labs",
+    role = c("cph", "fnd"))
     )
-Description: What the package does (one paragraph).
+Description: Transcribe climate data
 License: AGPL-3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
