--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -2,12 +2,12 @@
 # Tensorflow in this case
 FROM nvcr.io/nvidia/tensorflow:23.09-tf2-py3
 
-# create a non-root user named khufkens, 
-# give them the password "khufkens" put them in the sudo group
+# create a non-root user named tester, 
+# give them the password "tester" put them in the sudo group
 # rename to your local username
-RUN useradd -d /home/khufkens -m -s /bin/bash khufkens && echo "khufkens:khufkens" | chpasswd && adduser khufkens sudo
+RUN useradd -d /home/tester -m -s /bin/bash tester && echo "tester:tester" | chpasswd && adduser tester sudo
 
-# start working in the "khufkens" home directory
+# default nvidia workspace
 WORKDIR /workspace
 
 # install required python packages
@@ -15,7 +15,7 @@ RUN pip install jupyter
 RUN pip install matplotlib
 
 # set user to the local username
-USER khufkens
+USER tester
 
 # expose outgoing traffic on port 8888
 EXPOSE 8888
